--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_name">SleepGuard</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="SleepToogleOn">Sleeping</string>
+    <string name="SleepToogleOn"></string>
     <string name="AppName">Sleep Guard</string>
-    <string name="TestNotificationButton">Test Notification</string>
+    <string name="GoogleMessage">Powered by Google Inc.</string>
     <string name="DisturbingNotification">You are disturbing someone\'s sleep</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
@@ -42,5 +42,6 @@
     <string name="unknown_geofence_transition">Unknown Transition</string>
 
     <string name="geofence_transition_notification_text">Click notification to return to app</string>
+    <string name="textaboveswitch">Do you want to sleep now?</string>
 
 </resources>
